Prepare the website for great features
Use Eleventy.

--- a/src/style.css
+++ b/src/style.css
@@ -238,6 +238,10 @@ a:not([class]):hover {
   text-decoration-thickness: 3px;
 }
 
+a[aria-current="page"] {
+  background-color: var(--color-light-shade);
+}
+
 :is(ol, ul) {
   margin-block-end: 0;
 }
